--- a/index.html
+++ b/index.html
@@ -235,11 +235,57 @@ width:212px
 <li><a href="http://eludemailxhnqzfmxehy3bk5guyhlxbunfyhkcksv4gvx6d3wcf6smad.onion/">Elude Mail</a> &#8211; Elude.in hidden service</li>
 <li><a href="http://secmail63sex4dfw6h2nsrbmfz2z6alwxe4e3adtkpd4pcvkhht4jdad.onion/src/login.php">Secmail</a> &#8211; SecMail.Pro</li>
 <li><a href="http://ctemplarpizuduxk3fkwrieizstx33kg5chlvrh37nz73pv5smsvl6ad.onion/">Ctemplar</a> &#8211; Armored Email</li>
-<li><a href="protonmailrmez3lotccipshtkleegetolb73fuirgj7r4o4vfu7ozyd.onion">Protonmail</a> &#8211; A solid email</li>
-<li><a href="LINK">NAME</a> &#8211; CAPTION</li>
-<li><a href="LINK">NAME</a> &#8211; CAPTION</li>
-<li><a href="LINK">NAME</a> &#8211; CAPTION</li>
+<li><a href="http://protonmailrmez3lotccipshtkleegetolb73fuirgj7r4o4vfu7ozyd.onion">Protonmail</a> &#8211; A solid email</li>
+<li><a href="http://sonarmsng5vzwqezlvtu2iiwwdn3dxkhotftikhowpfjuzg7p3ca5eid.onion">Sonar</a> &#8211; Sonar tor messenger</li>
+<li><a href="http://danielas3rtn54uwmofdo3x2bsdifr47huasnmbgqzfrec5ubupvtpid.onion/mail/register.php">DanWin Email</a> &#8211; Squirell mail</li>
+  <h2> Blogs </h2>
+  <li><a href="http://lainwir3s4y5r7mqm3kurzpljyf77vty2hrrfkps6wm4nnnqzest4lqd.onion/">qorg11</a> &#8211; qord11.net mirror</li>
+<li><a href="http://cgjzkysxa4ru5rhrtr6rafckhexbisbtxwg2fg743cjumioysmirhdad.onion/">CourseEnigma</a> &#8211; Course Enigma Blog</li>
+<li><a href="http://killnod2s77o3axkktdu52aqmmy4acisz2gicbhjm4xbvxa2zfftteyd.onion/">Kill9</a> &#8211; Kill9 Blog</li>
+<li><a href="http://digdeep4orxw6psc33yxa2dgmuycj74zi6334xhxjlgppw6odvkzkiad.onion/">Digdeeper</a> &#8211; Digdeeper Blog</li>
+<li><a href="http://spywaredrcdg5krvjnukp3vbdwiqcv3zwbrcg6qh27kiwecm4qyfphid.onion/">Spyware Watchdog</a> &#8211; Spaware Watchdog Blog</li>
+<li><a href="http://meynethaffeecapsvfphrcnfrx44w2nskgls2juwitibvqctk2plvhqd.onion/">MayVaneDayStudios</a> &#8211; May Vane Day Studios</li>
+<li><a href="http://zsxjtsgzborzdllyp64c6pwnjz5eic76bsksbxzqefzogwcydnkjy3yd.onion/">ShadowWiki</a> &#8211; Shadow Wiki Blog</li>
+<li><a href="http://potatoynwcg34xyodol6p6hvi5e4xelxdeowsl5t2daxywepub32y7yd.onion/">GoBeyond</a> &#8211; GoBeyond Blog</li>
+<li><a href="http://xjfbpuj5<h2>News Sites</h2>
 
+</ul>6rdazx4iolylxplbvyft2onuerjeimlcqwaihp3s6r4xebqd.onion/">Sconfig</a> &#8211; A blog of the lost!</li>
+  <h2>News Sites</h2>
+<ul>
+<li><a href="http://p53lf57qovyuvwsc6xnrppyply3vtqm7l6pcobkmyqsiofyeznfu5uqd.onion/">ProPublica</a> &#8211; ProPublica News</li>
+<li><a href="http://darkzzx4avcsuofgfez5zq75cqc4mprjvfqywo45dfcaxrwqg6qrlfid.onion/">DarkNetLive</a> &#8211; Dark Web News</li>
+</ul>
+  <h2> books </h2>
+  <li><a href="http://bible4u2lvhacg4b3to2e2veqpwmrc2c3tjf2wuuqiz332vlwmr4xbad.onion/">Bible4u</a> &#8211; The Bible</li>
+<li><a href="http://kx5thpx2olielkihfyo4jgjqfb7zx7wxr3sd4xzt26ochei4m6f7tayd.onion/">Imperial Library</a> &#8211; Imperial Library Site</li>
+<li><a href="http://nv3x2jozywh63fkohn5mwp2d73vasusjixn3im3ueof52fmbjsigw6ad.onion/">Comic Book Library</a> &#8211; Comic Books</li>
+  <h2> WhistleBlowing
+<li><a href="http://sdolvtfhatvsysc6l34d65ymdwxcujausv7k5jk4cy5ttzhjoi6fzvyd.onion/">Securedrop</a> &#8211; The open-source whistleblower submission system managed by Freedom of the Press Foundation.</li>
+  <li><a href="tcecdnp2fhyxlcrjoyc2eimdjosr65hweut6y7r2u6b5y75yuvbkvfyd.onion">Active at darknet markets</a> &#8211; Onion set up by the Police and the Judicial Authorities of the Netherlands, listing Active, identified, and arrested Darknet Market operators.</li>
+      <li><a href="f3mryj3e2uw2zrv3zv6up6maqosgzn27frz7xodvpl7pkestoyigtkad.onion">AfriLeaks</a> &#8211; Blow the whistle</li>
+      <li><a href="xp44cagis447k3lpb4wwhcqukix6cgqokbuys24vmxmbzmaq2gjvc2yd">The guardians </a> &#8211; Whistle blowing.</li>
+      <li><a href="https://p53lf57qovyuvwsc6xnrppyply3vtqm7l6pcobkmyqsiofyeznfu5uqd.onion">Propublica</a> &#8211; News</li>
+      <li><a href="caseslrwwcr744frvczmogqpa5jxfl6qhx3fxi2ne5pnro4yvsevhzid.onion">Judicial Review</a> &#8211; Huge database of court cases (multiple languages available).</li>
+    <h2> Onion mirrors of clearnet sites </h2>
+          <li><a href="2gzyxa5ihm7nsggfxnu52rck2vv4rvmdlkiu3zzui5du4xyclen53wid">Tor</a> &#8211; Tors site</li>
+  <li><a href="ej3kv4ebuugcmuwxctx5ic7zxh73rnxt42soi3tdneu2c2em55thufqd.onion">The New York Times Secure Drop</a> &#8211; The Official .onion Secure Drop of the New York Times</li>
+      <li><a href="http://dwnewsgngmhlplxy6o2twtfgjnrnjxbegbwqx6wnotdhkzt562tszfid.onion/">Deutsche Welle</a> &#8211;Official website of Deutsche Welle</li>
+      <li><a href="http://bbcnewsd73hkzno2ini43t4gblxvycyac5aw4gnv7t2rccijh7745uqd.onion/">BBC News</a> &#8211; Official website of BBC News</li>
+      <li><a href="http://protonmailrmez3lotccipshtkleegetolb73fuirgj7r4o4vfu7ozyd.onion/">Protonmail</a> &#8211;Onion version of ProtonMail</li>
+      <li><a href="http://pornhubvybmsymdol4iibwgwtkpwmeyd6luq2gxajgjzfjvotyt5zhyd.onion/">PornHub</a> &#8211;  The Onion version of the popular porn site</li>
+      <li><a href="http://piratebayo3klnzokct3wt5yyxb2vpebbuyjl7m623iaxmqhsd52coid.onion/">The Pirate Bay </a> &#8211;  Onion version of the Pirate Bay torrent site</li>
+      <li><a href="http://suprbaydvdcaynfo4dgdzgxb4zuso7rftlil5yg5kqjefnw4wq4ulcad.onion/">The Pirate Bay Forum</a> &#8211; Onion version of the popular bittorrent site's forums</li>
+      <li><a href="http://nehdddktmhvqklsnkjqcbpmb63htee2iznpcbs5tgzctipxykpj6yrid.onion/">LocalMonero.co</a> &#8211; You can buy and sell Monero here, via it's .onion domain</li>
+      <li><a href="http://tcecdnp2fhyxlcrjoyc2eimdjosr65hweut6y7r2u6b5y75yuvbkvfyd.onion/">National Police of the Netherlands</a> &#8211; The official site.</li>
+      <li><a href="http://ciadotgov4sjwlzihbbgxnqg3xiyrg7so2r2o3lt5wz5ypk4sxyjstad.onion/">The CIA</a> &#8211; The CIA's Official Onion Site</li>
+      <li><a href="http://ncidetfs7banpz2d7vpndev5somwoki5vwdpfty2k7javniujekit6ad.onion/">NCIDE Task Force</a> &#8211; Their official site.</li>
+      <li><a href="http://facebookwkhpilnemxj7asaniu7vnjjbiltxjqhye3mhbshg7kx5tfyd.onion/">Facebook </a> &#8211;  Facebook's official Onion version, Claims not to keep logs</li>
+          <li><a href="http://dds6qkxpwdeubwucdiaord2xgbbeyds25rbsgr73tbfpqpt4a6vjwsyd.onion/">Whonix</a> &#8211; Whonix's offical onion site.</li>
+      <li><a href="http://qubesosfasa4zl44o4tws22di6kepyzfeqv3tg4e3ztknltfxqrymdad.onion/">Qubes OS</a> &#8211; Qubes OS</li>
+          <li><a href="https://twitter3e4tixl4xyajtrzo62zg5vztmjuricljdp2c5kshju4avyoid.onion/">Twitter</a> &#8211; Sign up now to get your own personalized timeline!</li>
+      <li><a href="https://reddittorjg6rue252oqsxryoxengawnmo46qy4kyii5wtqnwfj4ooad.onion/">Reddit</a> &#8211; The popular American social news aggregation, content rating, and discussion website.</li>
+          <li><a href="http://njallalafimoej5i4eg7vlnqjvmb6zhdh27qxcatdn647jtwwwui3nad.onion/">NJALLA</a> &#8211; Considered the worlds most notorious "Privacy as a Service" provider for domains, VPS' and VPNs.</li>
+      <li><a href="LINK">NAME</a> &#8211; CAPTION</li>
 <br>
 
 </body>
