--- a/index.html
+++ b/index.html
@@ -259,7 +259,7 @@ width:212px
   <li><a href="http://bible4u2lvhacg4b3to2e2veqpwmrc2c3tjf2wuuqiz332vlwmr4xbad.onion/">Bible4u</a> &#8211; The Bible</li>
 <li><a href="http://kx5thpx2olielkihfyo4jgjqfb7zx7wxr3sd4xzt26ochei4m6f7tayd.onion/">Imperial Library</a> &#8211; Imperial Library Site</li>
 <li><a href="http://nv3x2jozywh63fkohn5mwp2d73vasusjixn3im3ueof52fmbjsigw6ad.onion/">Comic Book Library</a> &#8211; Comic Books</li>
-  <h2> WhistleBlowing <h2>
+  <h2> WhistleBlowing </h2>
 <li><a href="http://sdolvtfhatvsysc6l34d65ymdwxcujausv7k5jk4cy5ttzhjoi6fzvyd.onion/">Securedrop</a> &#8211; The open-source whistleblower submission system managed by Freedom of the Press Foundation.</li>
   <li><a href="tcecdnp2fhyxlcrjoyc2eimdjosr65hweut6y7r2u6b5y75yuvbkvfyd.onion">Active at darknet markets</a> &#8211; Onion set up by the Police and the Judicial Authorities of the Netherlands, listing Active, identified, and arrested Darknet Market operators.</li>
       <li><a href="f3mryj3e2uw2zrv3zv6up6maqosgzn27frz7xodvpl7pkestoyigtkad.onion">AfriLeaks</a> &#8211; Blow the whistle</li>
