--- a/index.html
+++ b/index.html
@@ -247,13 +247,18 @@ width:212px
 <li><a href="http://meynethaffeecapsvfphrcnfrx44w2nskgls2juwitibvqctk2plvhqd.onion/">MayVaneDayStudios</a> &#8211; May Vane Day Studios</li>
 <li><a href="http://zsxjtsgzborzdllyp64c6pwnjz5eic76bsksbxzqefzogwcydnkjy3yd.onion/">ShadowWiki</a> &#8211; Shadow Wiki Blog</li>
 <li><a href="http://potatoynwcg34xyodol6p6hvi5e4xelxdeowsl5t2daxywepub32y7yd.onion/">GoBeyond</a> &#8211; GoBeyond Blog</li>
-<li><a href="http://xjfbpuj5<h2>News Sites</h2>
+  <li><a href="http://bvten5svsltfpxrxl72ukqxixwo2m5ek5svmcxgrmkta4tbmiemuibid.onion/">Beneath VT</a> &#8211;Beneath VT</li>
+    <li><a href="http://rougmnvswfsmd4dq.onion/"> Tor metrics </a> &#8211; Welcome to Tor Metrics, the primary place to learn interesting facts about the Tor network, the largest deployed anonymity network to date. If something can be measured safely, you'll find it here. </li>
+    <li><a href=""> </a> &#8211; </li>  
+    <li><a href=""> </a> &#8211; </li>  
+<h2>News Sites</h2>
 
 </ul>6rdazx4iolylxplbvyft2onuerjeimlcqwaihp3s6r4xebqd.onion/">Sconfig</a> &#8211; A blog of the lost!</li>
   <h2>News Sites</h2>
 <ul>
 <li><a href="http://p53lf57qovyuvwsc6xnrppyply3vtqm7l6pcobkmyqsiofyeznfu5uqd.onion/">ProPublica</a> &#8211; ProPublica News</li>
 <li><a href="http://darkzzx4avcsuofgfez5zq75cqc4mprjvfqywo45dfcaxrwqg6qrlfid.onion/">DarkNetLive</a> &#8211; Dark Web News</li>
+      <li><a href="http://ovgl57qc3a5abwqgdhdtssvmydr6f6mjz6ey23thwy63pmbxqmi45iid.onion/">FlashLight</a> &#8211; Darkweb news</li>
 </ul>
   <h2> books </h2>
   <li><a href="http://bible4u2lvhacg4b3to2e2veqpwmrc2c3tjf2wuuqiz332vlwmr4xbad.onion/">Bible4u</a> &#8211; The Bible</li>
@@ -285,7 +290,7 @@ width:212px
           <li><a href="https://twitter3e4tixl4xyajtrzo62zg5vztmjuricljdp2c5kshju4avyoid.onion/">Twitter</a> &#8211; Sign up now to get your own personalized timeline!</li>
       <li><a href="https://reddittorjg6rue252oqsxryoxengawnmo46qy4kyii5wtqnwfj4ooad.onion/">Reddit</a> &#8211; The popular American social news aggregation, content rating, and discussion website.</li>
           <li><a href="http://njallalafimoej5i4eg7vlnqjvmb6zhdh27qxcatdn647jtwwwui3nad.onion/">NJALLA</a> &#8211; Considered the worlds most notorious "Privacy as a Service" provider for domains, VPS' and VPNs.</li>
-      <li><a href="LINK">NAME</a> &#8211; CAPTION</li>
+    
 <br>
 
 </body>
