--- a/index.html
+++ b/index.html
@@ -217,6 +217,7 @@ width:212px
 </div></div>
 <div id="main">
 <h3>EthaCol</h3>
+  <p> are you new to the darkweb and tired of seeing illegal things? here you go with some completely ethical links!. request more links are EthaCol9@gmail.com </p>
 </tr>
 </tbody>
 </table>
@@ -238,28 +239,25 @@ width:212px
 <li><a href="http://protonmailrmez3lotccipshtkleegetolb73fuirgj7r4o4vfu7ozyd.onion">Protonmail</a> &#8211; A solid email</li>
 <li><a href="http://sonarmsng5vzwqezlvtu2iiwwdn3dxkhotftikhowpfjuzg7p3ca5eid.onion">Sonar</a> &#8211; Sonar tor messenger</li>
 <li><a href="http://danielas3rtn54uwmofdo3x2bsdifr47huasnmbgqzfrec5ubupvtpid.onion/mail/register.php">DanWin Email</a> &#8211; Squirell mail</li>
-  <h2> Blogs </h2>
-  <li><a href="http://lainwir3s4y5r7mqm3kurzpljyf77vty2hrrfkps6wm4nnnqzest4lqd.onion/">qorg11</a> &#8211; qord11.net mirror</li>
-<li><a href="http://cgjzkysxa4ru5rhrtr6rafckhexbisbtxwg2fg743cjumioysmirhdad.onion/">CourseEnigma</a> &#8211; Course Enigma Blog</li>
-<li><a href="http://killnod2s77o3axkktdu52aqmmy4acisz2gicbhjm4xbvxa2zfftteyd.onion/">Kill9</a> &#8211; Kill9 Blog</li>
-<li><a href="http://digdeep4orxw6psc33yxa2dgmuycj74zi6334xhxjlgppw6odvkzkiad.onion/">Digdeeper</a> &#8211; Digdeeper Blog</li>
-<li><a href="http://spywaredrcdg5krvjnukp3vbdwiqcv3zwbrcg6qh27kiwecm4qyfphid.onion/">Spyware Watchdog</a> &#8211; Spaware Watchdog Blog</li>
-<li><a href="http://meynethaffeecapsvfphrcnfrx44w2nskgls2juwitibvqctk2plvhqd.onion/">MayVaneDayStudios</a> &#8211; May Vane Day Studios</li>
-<li><a href="http://zsxjtsgzborzdllyp64c6pwnjz5eic76bsksbxzqefzogwcydnkjy3yd.onion/">ShadowWiki</a> &#8211; Shadow Wiki Blog</li>
-<li><a href="http://potatoynwcg34xyodol6p6hvi5e4xelxdeowsl5t2daxywepub32y7yd.onion/">GoBeyond</a> &#8211; GoBeyond Blog</li>
-  <li><a href="http://bvten5svsltfpxrxl72ukqxixwo2m5ek5svmcxgrmkta4tbmiemuibid.onion/">Beneath VT</a> &#8211;Beneath VT</li>
-    <li><a href="http://rougmnvswfsmd4dq.onion/"> Tor metrics </a> &#8211; Welcome to Tor Metrics, the primary place to learn interesting facts about the Tor network, the largest deployed anonymity network to date. If something can be measured safely, you'll find it here. </li>
-    <li><a href=""> </a> &#8211; </li>  
-    <li><a href=""> </a> &#8211; </li>  
-<h2>News Sites</h2>
+  <h2> Blogs/essays/news </h2>
 
-</ul>6rdazx4iolylxplbvyft2onuerjeimlcqwaihp3s6r4xebqd.onion/">Sconfig</a> &#8211; A blog of the lost!</li>
-  <h2>News Sites</h2>
-<ul>
-<li><a href="http://p53lf57qovyuvwsc6xnrppyply3vtqm7l6pcobkmyqsiofyeznfu5uqd.onion/">ProPublica</a> &#8211; ProPublica News</li>
-<li><a href="http://darkzzx4avcsuofgfez5zq75cqc4mprjvfqywo45dfcaxrwqg6qrlfid.onion/">DarkNetLive</a> &#8211; Dark Web News</li>
-      <li><a href="http://ovgl57qc3a5abwqgdhdtssvmydr6f6mjz6ey23thwy63pmbxqmi45iid.onion/">FlashLight</a> &#8211; Darkweb news</li>
-</ul>
+    <li><a href="http://darkzzx4avcsuofgfez5zq75cqc4mprjvfqywo45dfcaxrwqg6qrlfid.onion/">Darknet live </a> &#8211; Popular news site about Darknet matters </li>  
+    <li><a href="http://ovgl57qc3a5abwqgdhdtssvmydr6f6mjz6ey23thwy63pmbxqmi45iid.onion/">FlashLight Deepweb News  </a> &#8211;  Another website about news from the deep web. </li>  
+      <li><a href="http://rougmnvswfsmd4dq.onion/">Tor Metrics  </a> &#8211; Welcome to Tor Metrics, the primary place to learn interesting facts about the Tor network, the largest deployed anonymity network to date. If something can be measured safely, you'll find it here.  </li>  
+      <li><a href="http://27m3p2uv7igmj6kvd4ql3cct5h3sdwrsajovkkndeufumzyfhlfev4qd.onion/">The Intercept </a> &#8211;  Fearless, adversarial journalism that holds the powerful accountable. </li>  
+      <li><a href="http://superkuhf6grlngvhaelkgaem6i4phmzd7rekeguphwbplhk3fanpjqd.onion/"> Superkuh</a> &#8211; Much information about spectrogram, wireless, and radio. </li>  
+    <li><a href="http://bvten5svsltfpxrxl72ukqxixwo2m5ek5svmcxgrmkta4tbmiemuibid.onion/">Beneath VT </a> &#8211; Exploring Virginia Tech's steam tunnels and beyond.  </li>  
+      <li><a href="http://potatoynwcg34xyodol6p6hvi5e4xelxdeowsl5t2daxywepub32y7yd.onion/">Go Beyond </a> &#8211;  A blog about politics, potatoes, technology, Tor, etc. </li>  
+      <li><a href="http://xjfbpuj56rdazx4iolylxplbvyft2onuerjeimlcqwaihp3s6r4xebqd.onion/">S-Config </a> &#8211;  Blog about tech, rants, articles. </li>  
+      <li><a href="http://p53lf57qovyuvwsc6xnrppyply3vtqm7l6pcobkmyqsiofyeznfu5uqd.onion/">ProRepublica  </a> &#8211; Investigative Journalism and News. </li>  
+   <li><a href="http://cgjzkysxa4ru5rhrtr6rafckhexbisbtxwg2fg743cjumioysmirhdad.onion/">Coarse Enigma  </a> &#8211; A Privacy and Cybersecurity Blog. </li>  
+      <li><a href="http://theyoshxgvcjm4s2xdt6zcjym4kgskibrlos6fai26yes4bhpia5z7qd.onion/">TheYosh.nl</a> &#8211;  Free information for everybody. </li>  
+   <li><a href="http://digdeep4orxw6psc33yxa2dgmuycj74zi6334xhxjlgppw6odvkzkiad.onion/">Dig Deeper </a> &#8211; Security advices. </li>  
+      <li><a href="http://jamie3vkiwibfiwucd6vxijskbhpjdyajmzeor4mc4i7yopvpo4p7cyd.onion/">JamieWeb  </a> &#8211; Security tutorials and blog. </li>  
+        <li><a href="http://f2vfjp3jc37gxgn4hum4uf2bhi2w3kp4jbzdwegrn6bvtezbhminobid.onion/">VDARE </a> &#8211; News and analysis concerning immigration and demography in the United States of America, 'America's immigration voice'. Singing_Sailing_Man's personal site </li>  
+        <li><a href="http://jmd3ovvdxwf3zmsdpqgq4yyyine4mj4mepdeeb6jpopl3b3bn2c3xpyd.onion/">Singing_Sailing_Man </a> &#8211; Singing_Sailing_Man's personal site </li>  
+
+        <li><a href=""> </a> &#8211; </li>  
   <h2> books </h2>
   <li><a href="http://bible4u2lvhacg4b3to2e2veqpwmrc2c3tjf2wuuqiz332vlwmr4xbad.onion/">Bible4u</a> &#8211; The Bible</li>
 <li><a href="http://kx5thpx2olielkihfyo4jgjqfb7zx7wxr3sd4xzt26ochei4m6f7tayd.onion/">Imperial Library</a> &#8211; Imperial Library Site</li>
