--- a/index.html
+++ b/index.html
@@ -262,6 +262,13 @@ width:212px
   <li><a href="http://bible4u2lvhacg4b3to2e2veqpwmrc2c3tjf2wuuqiz332vlwmr4xbad.onion/">Bible4u</a> &#8211; The Bible</li>
 <li><a href="http://kx5thpx2olielkihfyo4jgjqfb7zx7wxr3sd4xzt26ochei4m6f7tayd.onion/">Imperial Library</a> &#8211; Imperial Library Site</li>
 <li><a href="http://nv3x2jozywh63fkohn5mwp2d73vasusjixn3im3ueof52fmbjsigw6ad.onion/">Comic Book Library</a> &#8211; Comic Books</li>
+    <li><a href="http://kx5thpx2olielkihfyo4jgjqfb7zx7wxr3sd4xzt26ochei4m6f7tayd.onion/">Imperial Library of Trantor </a> &#8211; Close to 1 million books  </li>  
+    <li><a href="http://libraryfyuybp7oyidyya3ah5xvwgyx6weauoini7zyz555litmmumad.onion/">just another library </a> &#8211; A library that offers books, courses and art content. </li>  
+    <li><a href="http://zqktlwiuavvvqqt4ybvgvi7tyo4hjl5xgfuvpdf6otjiycgwqbym2qad.onion/wiki/Bible">Bible </a> &#8211; several links for downloading versions of the Bible. </li>  
+      <li><a href=""> </a> &#8211; </li>  
+      <li><a href=""> </a> &#8211; </li>  
+      <li><a href=""> </a> &#8211; </li>  
+      <li><a href=""> </a> &#8211; </li>  
   <h2> WhistleBlowing </h2>
 <li><a href="http://sdolvtfhatvsysc6l34d65ymdwxcujausv7k5jk4cy5ttzhjoi6fzvyd.onion/">Securedrop</a> &#8211; The open-source whistleblower submission system managed by Freedom of the Press Foundation.</li>
   <li><a href="tcecdnp2fhyxlcrjoyc2eimdjosr65hweut6y7r2u6b5y75yuvbkvfyd.onion">Active at darknet markets</a> &#8211; Onion set up by the Police and the Judicial Authorities of the Netherlands, listing Active, identified, and arrested Darknet Market operators.</li>
